navbar fix and error squash

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -14,7 +14,7 @@ html, body, td, table, input {
 }
 
 input {
-  width: 200px;
+  width: 300px;
 }
 
 // This code removes the arrow buttons from number inputs
